// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change gap 1`] = `
<DocumentFragment>
  <div
    class="css-12kxrxg"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-lgj0h8"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;
